Final version before submitting

--- a/dissertation/bib.bib
+++ b/dissertation/bib.bib
@@ -505,3 +505,32 @@
   year={2011},
   publisher={O'Reilly Media, Inc.}
 }
+
+@Misc{django-docs-urls,
+    title = {{URL Dispatcher | Django Documentation}},
+    howpublished = "https://docs.djangoproject.com/en/1.10/topics/http/urls/",
+    author={Django},
+    note="Last accessed: 19th March 2017"
+}
+
+
+@Misc{django-docs-views,
+    title = {{Writing views | Django Documentation}},
+    howpublished = "https://docs.djangoproject.com/en/1.10/topics/http/views/",
+    author={Django},
+    note="Last accessed: 19th March 2017"
+}
+
+@Misc{django-docs-forms,
+    title = {{Working with forms | Django Documentation}},
+    howpublished = "https://docs.djangoproject.com/en/1.10/topics/forms/",
+    author={Django},
+    note="Last accessed: 19th March 2017"
+}
+
+@Misc{django-docs-models,
+    title = {{Models | Django Documentation}},
+    howpublished = "https://docs.djangoproject.com/en/1.10/topics/db/models/",
+    author={Django},
+    note="Last accessed: 19th March 2017"
+}
