--- a/dissertation/sections/08-testing-eval.tex
+++ b/dissertation/sections/08-testing-eval.tex
@@ -26,15 +26,15 @@ The unit tests, which confirmed that both the part of the back-end that returned
 
 Integration tests serve the purpose of testing that each component works predictably when combined with all other components it should work with \cite{basanieri2000practical}. For this project, they serve the purpose of confirming that the Tulip Web Wrapper worked as expected, and that it interacted with the rest of the back-end correctly.
 
-The integration tests for the Tulip Web Wrapper involved creating a network in the database during the set up phase of the test, and then loading in that network using different algorithms and ensuring the output at the end was correct. This entailed calling the \texttt{loadGraph} API endpoint using JavaScript AJAX \cite{jquery-ajax} and passing in appropriate parameters such as the network name, and whether node pruning or node bundling using number of edges was enabled. The response of that call (a JSON object) was then decoded and it was checked if the call had been successful, and if it had contained the correct number of nodes and edges, along with the expected number of nodes that had been pruned of bundled. This ensured that the logic within the view was correct, that the bundling code worked as anticipated, and that the conversion worked correctly.
+The integration tests for the Tulip Web Wrapper involved creating a network in the database during the set-up phase of the test, and then loading in that network using different algorithms and ensuring the output at the end was correct. This entailed calling the \texttt{loadGraph} API endpoint using JavaScript AJAX \cite{jquery-ajax} and passing in appropriate parameters such as the network name, and whether node pruning or node bundling using number of edges was enabled. The response of that call (a JSON object) was then decoded and it was checked if the call had been successful, and if it had contained the correct number of nodes and edges, along with the expected number of nodes that had been pruned of bundled. This ensured that the logic within the view was correct, that the bundling code worked as anticipated, and that the conversion worked correctly.
 
 \section{User Evaluation}
 
-As stated in Chapter \ref{chap:motiv}, during background research for the project, it was found that the majority of what little there was on massive network visualisation focused on the interface design and quality of interaction between a user and the system. It was hence decided that the aim of this project would be to create a system that enabled users to visualise massive networks within a browser whilst specifically focusing on the performance of the system. This was completed by applying one (or several) algorithm to the network in order to: reduce its size, speed up render times and improve network transfer rates. An additional goal was to ensure that the Tulip Python API Web Endpoint and the JavaScript library were as flexible as possible, to ensure the easy development of future interfaces.
+As stated in Chapter \ref{chap:motiv}, during background research for the project, it was found that a large proportion of literature existing on massive network visualisation focused on the user interface design and quality of interaction between a user and the system. It was hence decided that the aim of this project would be to create a system that utilised high performance network manipulation software to allow users to visualise massive networks within a browser, on a low powered client. This was completed by applying one or more algorithms to the network in order to: reduce its node and edge count, speed up render times and improve network transfer rates. An additional goal was to ensure that the Tulip Python API Web Endpoint and the JavaScript library were as flexible as possible, to ensure the easy development of future interfaces.
 
-The interface made for this project was kept simple to allow for maximal development time to be spent optimising and testing the web wrapper (it can be seen in Figure \ref{fig:topbar}). Additionally, the JavaScript network visualisation framework used (Vis.js) was chosen due to it's simplicity, and it is known to be less flexible than other choices, such as D3.js - and hence if interface design had been a priority then another framework would have been chosen. 
+The interface made for this project was kept simple to allow for maximal development time to be spent optimising and testing the web wrapper (it can be seen in Figure \ref{fig:topbar}). Additionally, the JavaScript network visualisation framework used (Vis.js) was chosen due to its simplicity, and it is known to be less flexible than other choices, such as D3.js - and hence if interface design had been a priority then another framework would have been chosen. 
 
-Given all of the above facts, it was decided that a user evaluation was not appropriate for the project, as significant development time was not spent on the interface. The focus of the project was to make the server and client as high performing as possible. The performance is evaluated in Section \ref{sec:perf-eval}.
+Given all the above facts, it was decided that a user evaluation was not appropriate for the project, as significant development time was not spent on the interface. The focus of the project was to make the server and client as high performing as possible. The performance is evaluated in Section \ref{sec:perf-eval}.
 
 \section{Performance Evaluation}
 \label{sec:perf-eval}
