--- a/dissertation/sections/00-acknowledgements.tex
+++ b/dissertation/sections/00-acknowledgements.tex
@@ -1,8 +1,8 @@
 \renewcommand{\abstractname}{Acknowledgements}
 \begin{abstract}
 
-I would like to thank my project supervisor, Helen Purchase, and my advisor of studies, Dimitris Pezaros, for supporting me academically throughout my final year. Additionally, I would also like to thank Rory MacKenzie and all of SAS for motivating and supporting the project. 
+I would like to thank my project supervisor, Helen Purchase, and my advisor of studies, Dimitris Pezaros, for supporting me throughout my final year at university. Additionally, I would also like to thank Rory MacKenzie and SAS for motivating and supporting the project. 
 
-Finally, I would like to thank my friends and family for their continued care and support. 
+Finally, I would like to wholeheartedly thank my friends and family for their continued care and support. 
 
 \end{abstract}
