--- a/dissertation/sections/02-motivation.tex
+++ b/dissertation/sections/02-motivation.tex
@@ -4,7 +4,7 @@
 \chapter{Motivation}
 \label{chap:motiv}
 
-There is limited research and development of software in regards to the visualisation of massive networks in a browser. A solution for companies who require network visualisation can be to use existing software (whether open source or with a license attached), or to develop their own software. SAS have developed their own network visualisation software (for example, the SAS product `Visual Investigator' \cite{sasvi}) which performs well for up to a few thousand nodes, but begins to operate more poorly when the number of nodes exceeds that - in relation to processing power, system memory and bandwidth. As a result, SAS, who explicitly support this project, are keen to find ways for larger networks to be visualised both with high performance (loading times are low and requirements on a user's machine are kept to a minimum) and high information throughput (the visualisation provides valuable information to the user).
+There is limited research and development of software in regards to the visualisation of massive networks in a browser. A solution for companies who require network visualisation can be to use existing software (whether open source or with a license attached), or to develop their own software. SAS have developed their own network visualisation software (for example, the SAS product `Visual Investigator' \cite{sasvi}) which performs well for up to a few thousand nodes, but begins to operate more poorly when the number of nodes exceeds that - in relation to processing power, system memory and bandwidth. Thus, SAS, who explicitly support this project, are keen to find ways for larger networks to be visualised both with high performance (loading times are low and requirements on a user's machine are kept to a minimum) and high information throughput (the visualisation provides valuable information to the user).
 
 The solution to this problem is either to enhance the existing software or develop new solutions. If the current software was to be improved, then the goal would be to find out what bottlenecks exist throughout the process of loading a network, and then try to minimise the impact of the bottlenecks. If new solutions were to be created, then there are several possible ways the software's performance could be improved:
 
@@ -20,6 +20,6 @@ The solution to this problem is either to enhance the existing software or devel
 
 Following discussion with peers and then conducting initial research, it was found that there was little research done into massive network visualisation. Csardi and Nepusz have stated that there is a ``lack of network analysis software which can handle large graphs efficiently, and can be embedded into a higher level program or programming language (like Python, Perl or GNU R)'' \cite{csardi2006igraph}. Another article, by Chen and Chaomei, declared that there is ``A prolonged lack of low-cost, ready-to-use, and reconfigurable information visualization systems'' \cite{chen2005top}. Additionally, of what research there was, the majority of it focused on the user interface and how users interacted with the software system as opposed to improving the systems performance. Hence, it was decided that this project would focus how to increase the performance of visualisation systems.
 
-There are two important metrics to consider for massive network visualisation: the time it will take to visualise the networks from the user asking for it, and the amount of useful information the user will get from the displayed network. If neither of these metrics are met then the visualisation software is unusable. If the system is fast but shows little useful information then the software will be of little benefit to end users in most cases. If the system is slow but displays useful information at the end then the system is not very user friendly, but can still provide useful insights. Finally, if it is both fast and displays useful information then it is an optimal network visualisation system.
+There are two important metrics to consider for massive network visualisation: the time it will take to visualise the networks from the user asking for it, and the amount of useful information the user will get from the displayed network. If neither of these metrics are met, then the visualisation software is unusable. If the system is fast but shows little useful information then the software will be of little benefit to end users in most cases. If the system is slow but displays useful information, at the end then the system is not very user friendly, but can still provide useful insights. Finally, if it is both fast and displays useful information then it is an optimal network visualisation system.
 
 \end{document}
