--- a/dissertation/sections/04-research.tex
+++ b/dissertation/sections/04-research.tex
@@ -7,14 +7,14 @@
 \section{Background}
 \label{sec:background}
 
-Initial research was completed over a three month period and covered network visualisation, specifically massive network visualisation, and additionally looked into software that existed which visualised networks. The dearth of previous research confirmed that this is an area that was worth exploring further. This meant that exploration had to be done from scratch as there was no previous studies to build upon. However, this proved advantageous as the wealth of information gained during this period informed future decisions throughout the project.
+Initial research and a systematic review of existing software (Chapter \ref{sec:systematic-review}) was completed over a three-month period and covered network visualisation, specifically massive network visualisation, and additionally looked into software that existed which visualised networks. The dearth of previous research confirmed that this is an area that was worth exploring further. This meant that exploration had to be done from scratch as there was no previous studies to build upon. However, this proved advantageous as the wealth of information gained during this period informed future decisions throughout the project.
 
 In regards to the visualisation of massive networks, some important techniques learnt were:
 
 \subsection{Node Bundling}
 \label{sec:node_bundling}
 
-Node bundling is using algorithms to decide (with or without some form of user input) which nodes are similar to each other, and upon establishing this relationship, grouping them into a single node, generally visually different in some way (often by size or colour). It ``creates a less complicated visualization without losing connectivity information by automatically abstracting small [...] subgraphs'' \cite{six2003effective}. This allows for hundreds or thousands of nodes to be grouped into a single node in order to require less memory, processing power, bandwidth and screen space on the users machine. A way to further improve the visualisation is to show how the nodes being bundled connected with themselves, for example if they are heavily connected, all connected to just a few nodes, or if they are in a ring formation. Figure \ref{fig:bundling} and \ref{fig:deletion} demonstrate both node and edge bundling.
+Node bundling is using algorithms to decide (with or without some form of user input) which nodes are similar to each other, and upon establishing this relationship, grouping them into a single node, generally visually different in some way (often by size or colour). It ``creates a less complicated visualization without losing connectivity information by automatically abstracting small [...] subgraphs'' \cite{six2003effective}. This allows for hundreds or thousands of nodes to be grouped into a single node in order to require less memory, processing power, bandwidth and screen space on the user's machine. A way to further improve the visualisation is to show how the nodes being bundled connected with themselves, for example if they are heavily connected, all connected to just a few nodes, or if they are in a ring formation. Figure \ref{fig:bundling} and \ref{fig:deletion} demonstrate both node and edge bundling.
 
 \subsubsection{Node Pruning}
 \label{sec:node-pruning}
@@ -29,13 +29,13 @@ Another example of node bundling is an algorithm based on cliques. This involves
 \subsection{Edge bundling}
 \label{sec:edge_bundling}
 
-This is similar to node bundling but applied to edges. It ``trade[s] clutter for overdraw by routing related edges along similar paths'' \cite{hurter2012graph}, and ``can be seen as sharpening the edge spatial density, by making it high along bundles and low elsewhere'' \cite{hurter2012graph}. Overdraw is defined as making edges longer than necessary \cite{gansner2011multilevel}. If node bundling is done, then this process will have less of an impact, as all of the edges will already be bundled together assuming the node bundling algorithms were optimal. This would imply all interconnected nodes have been bundled so there is only one edge traversing between subgroups as opposed to many. Like node bundling, it is often shown through the change of the size of the edge or the colour. See Figure \ref{fig:bundling} and Figure \ref{fig:deletion} for two examples of a combination of node and edge bundling.
+This is similar to node bundling but applied to edges. It ``trade[s] clutter for overdraw by routing related edges along similar paths'' \cite{hurter2012graph}, and ``can be seen as sharpening the edge spatial density, by making it high along bundles and low elsewhere'' \cite{hurter2012graph}. Overdraw is defined as making edges longer than necessary \cite{gansner2011multilevel}. If node bundling is done, then this process will have less of an impact, as all the edges will already be bundled together assuming the node bundling algorithms were optimal. This would imply all interconnected nodes have been bundled so there is only one edge traversing between subgroups as opposed to many. Like node bundling, it is often shown through the change of the size of the edge or the colour. See Figure \ref{fig:bundling} and Figure \ref{fig:deletion} for two examples of a combination of node and edge bundling.
 \begin{figure}[htb]
     \centering
     \includegraphics[width=12cm]{4/bundling1}
     \\$\downarrow$\\
     \includegraphics[width=12cm]{4/bundling2}
-    \caption{This demonstrates both node and edge bundling, where thickness of edge displays how many edges there are, and size of node indicates number of nodes group. Additionally, each node displays how nodes within it were connected together. This particular example displays a comparison between a common network visualisation and a ModulGraph-based network visualisation. \cite{li2015modulgraph}}
+    \caption{This demonstrates both node and edge bundling, where thickness of edge displays how many edges there are, and size of node indicates number of nodes group. Additionally, each node displays how nodes within it were connected. This particular example displays a comparison between a common network visualisation and a ModulGraph-based network visualisation. \cite{li2015modulgraph}}
     \label{fig:bundling}
 \end{figure}
 
